k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: placeware
  labels:
    app.kubernetes.io/managed-by: kubectl
    app.kubernetes.io/part-of: placewarebot
